# ramulator

./: .gitignore  1_HowToRun.txt  CMakeLists.txt
configs/: DDR3-config.cfg
src/: Main.cpp  Memory.h  Processor.cpp  Processor.h  Scheduler.h  Statistics.h
